fixing home page horizontal scroll

--- a/src/assets/styles/common-styles.scss
+++ b/src/assets/styles/common-styles.scss
@@ -73,7 +73,7 @@ button {
 }
 
 .wide-image-wrapper {
-  width: 100vw;
+  width: 100%;
   height: calc(100vh - 56px);
   overflow: hidden;
 }
