--- a/src/index.scss
+++ b/src/index.scss
@@ -23,8 +23,10 @@
   src: url('./assets/fonts/HKGrotesk-ExtraLight.ttf') format(truetype);
 }
 
-* {
-  padding: 0;
+*,
+*::before,
+*::after {
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
